09-04-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Changed m_jet.m_jet_isbad to m_jet.m_jet_isnotbad
	* Added commpressed spectra samples

01-04-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Adding plotJetEfficiency macro to plot nice plots
	* Improved EventFilter with more proper cuts
	* Improved handling of sample weight and different input samples
	* Tagging MiniReader-00-00-03

30-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Added Znunu cuts and cut Flow functions
	* Correcting the logic of the jet efficency plots

25-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Adding Jet efficency plots

19-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Tagging MiniReader-00-00-01
	* Adding MiniReaderSelectionCuts to define cuts
	* Adding MiniReaderAuxFunctions containing auxiliary functions
	* Adding DefineSR defining the signal regions cuts
	* Adding MiniReaderEventFilter to filter events
	* Adding skeleton to produse the jetEfficency plot

18-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Added MiniReaderElectron class
	* Added MiniReaderMuon class
	* Added MiniReaderMissingET class
	* Added MiniReaderEventInfo class
	* Added MiniReaderCrossSection class
	* Added MiniReaderPrimaryVertex class
	* Added MiniReaderTruthParticles class

16-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Manage to read TTree

16-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Added support to read MiniTree
	* Added functions to plot histograms

14-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Added classes to read jets

13-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Creation of the package
	* Tagging MiniReader-00-00-01