@@ -4,35 +4,59 @@
 static constexpr const float MINETA = -5.;
 static constexpr const float MAXETA = 5.;
 
-#define SOME_ENUM(DO)		\
-  DO(EtMissMuVeto)		\
-  DO(InteractionPerCrossing)    \
-  DO(jetMultiplicityNoCut)	\
-  DO(n_pvtx_noCut)		\
-  DO(n_pvtx_3jets_jetpt30)	\
-  DO(n_pvtx_3jets_jetpt40)	\
-  DO(n_pvtx_3jets_jetpt50)	\
-  DO(n_pvtx_3jets_jetpt70)	\
-  DO(n_pvtx_4jets_jetpt30)	\
-  DO(n_pvtx_4jets_jetpt40)	\
-  DO(n_pvtx_4jets_jetpt50)	\
-  DO(n_pvtx_4jets_jetpt70)	\
-  DO(n_pvtx_5jets_jetpt30)	\
-  DO(n_pvtx_5jets_jetpt40)	\
-  DO(n_pvtx_5jets_jetpt50)	\
-  DO(n_pvtx_5jets_jetpt70)	\
-  DO(jetEfficency_3jets_jetpt30)\
-  DO(jetEfficency_3jets_jetpt40)\
-  DO(jetEfficency_3jets_jetpt50)\
-  DO(jetEfficency_3jets_jetpt70)\
-  DO(jetEfficency_4jets_jetpt30)\
-  DO(jetEfficency_4jets_jetpt40)\
-  DO(jetEfficency_4jets_jetpt50)\
-  DO(jetEfficency_4jets_jetpt70)\
-  DO(jetEfficency_5jets_jetpt30)\
-  DO(jetEfficency_5jets_jetpt40)\
-  DO(jetEfficency_5jets_jetpt50)\
-  DO(jetEfficency_5jets_jetpt70)\
+#define SOME_ENUM(DO)	                \
+  DO(EtMissMuVeto)                      \
+  DO(InteractionPerCrossing)            \
+  DO(jetMultiplicityNoCut)              \
+  DO(n_pvtx_noCut)                      \
+  DO(n_pvtx_3jets_jetpt30)              \
+  DO(n_pvtx_3jets_jetpt40)              \
+  DO(n_pvtx_3jets_jetpt50)              \
+  DO(n_pvtx_3jets_jetpt70)              \
+  DO(n_pvtx_3jets_jetpt30_jvf_acc)      \
+  DO(n_pvtx_3jets_jetpt40_jvf_acc)      \
+  DO(n_pvtx_3jets_jetpt50_jvf_acc)      \
+  DO(n_pvtx_3jets_jetpt70_jvf_acc)      \
+  DO(n_pvtx_4jets_jetpt30)              \
+  DO(n_pvtx_4jets_jetpt40)              \
+  DO(n_pvtx_4jets_jetpt50)              \
+  DO(n_pvtx_4jets_jetpt70)              \
+  DO(n_pvtx_4jets_jetpt30_jvf_acc)      \
+  DO(n_pvtx_4jets_jetpt40_jvf_acc)      \
+  DO(n_pvtx_4jets_jetpt50_jvf_acc)      \
+  DO(n_pvtx_4jets_jetpt70_jvf_acc)      \
+  DO(n_pvtx_5jets_jetpt30)              \
+  DO(n_pvtx_5jets_jetpt40)              \
+  DO(n_pvtx_5jets_jetpt50)              \
+  DO(n_pvtx_5jets_jetpt70)              \
+  DO(n_pvtx_5jets_jetpt30_jvf_acc)      \
+  DO(n_pvtx_5jets_jetpt40_jvf_acc)      \
+  DO(n_pvtx_5jets_jetpt50_jvf_acc)      \
+  DO(n_pvtx_5jets_jetpt70_jvf_acc)      \
+  DO(jetEfficency_3jets_jetpt30)        \
+  DO(jetEfficency_3jets_jetpt40)        \
+  DO(jetEfficency_3jets_jetpt50)        \
+  DO(jetEfficency_3jets_jetpt70)        \
+  DO(jetEfficency_3jets_jetpt30_jvf_acc)\
+  DO(jetEfficency_3jets_jetpt40_jvf_acc)\
+  DO(jetEfficency_3jets_jetpt50_jvf_acc)\
+  DO(jetEfficency_3jets_jetpt70_jvf_acc)\
+  DO(jetEfficency_4jets_jetpt30)        \
+  DO(jetEfficency_4jets_jetpt40)        \
+  DO(jetEfficency_4jets_jetpt50)        \
+  DO(jetEfficency_4jets_jetpt70)        \
+  DO(jetEfficency_4jets_jetpt30_jvf_acc)\
+  DO(jetEfficency_4jets_jetpt40_jvf_acc)\
+  DO(jetEfficency_4jets_jetpt50_jvf_acc)\
+  DO(jetEfficency_4jets_jetpt70_jvf_acc)\
+  DO(jetEfficency_5jets_jetpt30)        \
+  DO(jetEfficency_5jets_jetpt40)        \
+  DO(jetEfficency_5jets_jetpt50)        \
+  DO(jetEfficency_5jets_jetpt70)        \
+  DO(jetEfficency_5jets_jetpt30_jvf_acc)\
+  DO(jetEfficency_5jets_jetpt40_jvf_acc)\
+  DO(jetEfficency_5jets_jetpt50_jvf_acc)\
+  DO(jetEfficency_5jets_jetpt70_jvf_acc)\
 
 
 #define MAKE_ENUM(VAR) VAR,
@@ -73,30 +97,60 @@ void MiniReaderAlg::InitHisto()
   DefineHisto(n_pvtx_3jets_jetpt50, 40, 0, 80);
   DefineHisto(n_pvtx_3jets_jetpt70, 40, 0, 80);
 
+  DefineHisto(n_pvtx_3jets_jetpt30_jvf_acc, 40, 0, 80);
+  DefineHisto(n_pvtx_3jets_jetpt40_jvf_acc, 40, 0, 80);
+  DefineHisto(n_pvtx_3jets_jetpt50_jvf_acc, 40, 0, 80);
+  DefineHisto(n_pvtx_3jets_jetpt70_jvf_acc, 40, 0, 80);
+
   DefineHisto(n_pvtx_4jets_jetpt30, 40, 0, 80);
   DefineHisto(n_pvtx_4jets_jetpt40, 40, 0, 80);
   DefineHisto(n_pvtx_4jets_jetpt50, 40, 0, 80);
   DefineHisto(n_pvtx_4jets_jetpt70, 40, 0, 80);
+
+  DefineHisto(n_pvtx_4jets_jetpt30_jvf_acc, 40, 0, 80);
+  DefineHisto(n_pvtx_4jets_jetpt40_jvf_acc, 40, 0, 80);
+  DefineHisto(n_pvtx_4jets_jetpt50_jvf_acc, 40, 0, 80);
+  DefineHisto(n_pvtx_4jets_jetpt70_jvf_acc, 40, 0, 80);
 
   DefineHisto(n_pvtx_5jets_jetpt30, 40, 0, 80);
   DefineHisto(n_pvtx_5jets_jetpt40, 40, 0, 80);
   DefineHisto(n_pvtx_5jets_jetpt50, 40, 0, 80);
   DefineHisto(n_pvtx_5jets_jetpt70, 40, 0, 80);
 
+  DefineHisto(n_pvtx_5jets_jetpt30_jvf_acc, 40, 0, 80);
+  DefineHisto(n_pvtx_5jets_jetpt40_jvf_acc, 40, 0, 80);
+  DefineHisto(n_pvtx_5jets_jetpt50_jvf_acc, 40, 0, 80);
+  DefineHisto(n_pvtx_5jets_jetpt70_jvf_acc, 40, 0, 80);
+
   DefineHisto(jetEfficency_3jets_jetpt30, 40, 0, 80);
   DefineHisto(jetEfficency_3jets_jetpt40, 40, 0, 80);
   DefineHisto(jetEfficency_3jets_jetpt50, 40, 0, 80);
   DefineHisto(jetEfficency_3jets_jetpt70, 40, 0, 80);
+
+  DefineHisto(jetEfficency_3jets_jetpt30_jvf_acc, 40, 0, 80);
+  DefineHisto(jetEfficency_3jets_jetpt40_jvf_acc, 40, 0, 80);
+  DefineHisto(jetEfficency_3jets_jetpt50_jvf_acc, 40, 0, 80);
+  DefineHisto(jetEfficency_3jets_jetpt70_jvf_acc, 40, 0, 80);
 
   DefineHisto(jetEfficency_4jets_jetpt30, 40, 0, 80);
   DefineHisto(jetEfficency_4jets_jetpt40, 40, 0, 80);
   DefineHisto(jetEfficency_4jets_jetpt50, 40, 0, 80);
   DefineHisto(jetEfficency_4jets_jetpt70, 40, 0, 80);
 
+  DefineHisto(jetEfficency_4jets_jetpt30_jvf_acc, 40, 0, 80);
+  DefineHisto(jetEfficency_4jets_jetpt40_jvf_acc, 40, 0, 80);
+  DefineHisto(jetEfficency_4jets_jetpt50_jvf_acc, 40, 0, 80);
+  DefineHisto(jetEfficency_4jets_jetpt70_jvf_acc, 40, 0, 80);
+
   DefineHisto(jetEfficency_5jets_jetpt30, 40, 0, 80);
   DefineHisto(jetEfficency_5jets_jetpt40, 40, 0, 80);
   DefineHisto(jetEfficency_5jets_jetpt50, 40, 0, 80);
   DefineHisto(jetEfficency_5jets_jetpt70, 40, 0, 80);
+
+  DefineHisto(jetEfficency_5jets_jetpt30_jvf_acc, 40, 0, 80);
+  DefineHisto(jetEfficency_5jets_jetpt40_jvf_acc, 40, 0, 80);
+  DefineHisto(jetEfficency_5jets_jetpt50_jvf_acc, 40, 0, 80);
+  DefineHisto(jetEfficency_5jets_jetpt70_jvf_acc, 40, 0, 80);
 }
 
 void MiniReaderAlg::FillMET(double weight)
@@ -128,6 +182,7 @@ void MiniReaderAlg::FillJets(double weight)
 
     m_HistoContainer[n_pvtx_3jets_jetpt70]->Fill(m_pvtx.m_pvtx_n, weight);
 
+
   // Event survives if at most 4 jets or if there are more than 4 jets but the
   // pt of the fourth is less than some threshold (Mind the vector counting start
   // from 0):
@@ -147,6 +202,7 @@ void MiniReaderAlg::FillJets(double weight)
 
     m_HistoContainer[n_pvtx_4jets_jetpt70]->Fill(m_pvtx.m_pvtx_n, weight);
 
+
   // Event survives if at most 4 jets or if there are more than 4 jets but the
   // pt of the fourth is less than some threshold (Mind the vector counting start
   // from 0):
@@ -165,6 +221,68 @@ void MiniReaderAlg::FillJets(double weight)
   if (m_jet.m_jet_mult < 6 || (m_jet.m_jet_mult > 4 && m_jet.m_jet_pt->at(4) < 70000))
 
     m_HistoContainer[n_pvtx_5jets_jetpt70]->Fill(m_pvtx.m_pvtx_n, weight);
+
+
+  // Additional condition on JVF and eta:
+  std::vector<float> jvf_acc_jet_pt;
+
+  for(int i = 0; i < m_jet.m_jet_mult; ++i) {
+
+    if(std::fabs(m_jet.m_jet_eta->at(i)) < 2.4 && m_jet.m_jet_jvf->at(i) > .5)
+
+      jvf_acc_jet_pt.push_back(m_jet.m_jet_pt->at(i));
+  }
+
+  // For the three jets:
+  if (jvf_acc_jet_pt.size() < 4 || (jvf_acc_jet_pt.size() > 2 && jvf_acc_jet_pt[2] < 30000))
+
+    m_HistoContainer[n_pvtx_3jets_jetpt30_jvf_acc]->Fill(m_pvtx.m_pvtx_n, weight);
+
+  if (jvf_acc_jet_pt.size() < 4 || (jvf_acc_jet_pt.size() > 2 && jvf_acc_jet_pt[2] < 40000))
+
+    m_HistoContainer[n_pvtx_3jets_jetpt40_jvf_acc]->Fill(m_pvtx.m_pvtx_n, weight);
+
+  if (jvf_acc_jet_pt.size() < 4 || (jvf_acc_jet_pt.size() > 2 && jvf_acc_jet_pt[2] < 50000))
+
+    m_HistoContainer[n_pvtx_3jets_jetpt50_jvf_acc]->Fill(m_pvtx.m_pvtx_n, weight);
+
+  if (jvf_acc_jet_pt.size() < 4 || (jvf_acc_jet_pt.size() > 2 && jvf_acc_jet_pt[2] < 70000))
+
+    m_HistoContainer[n_pvtx_3jets_jetpt70_jvf_acc]->Fill(m_pvtx.m_pvtx_n, weight);
+
+  // For the four jets:
+  if (jvf_acc_jet_pt.size() < 5 || (jvf_acc_jet_pt.size() > 3 && jvf_acc_jet_pt[3] < 30000))
+
+    m_HistoContainer[n_pvtx_4jets_jetpt30_jvf_acc]->Fill(m_pvtx.m_pvtx_n, weight);
+
+  if (jvf_acc_jet_pt.size() < 5 || (jvf_acc_jet_pt.size() > 3 && jvf_acc_jet_pt[3] < 40000))
+
+    m_HistoContainer[n_pvtx_4jets_jetpt40_jvf_acc]->Fill(m_pvtx.m_pvtx_n, weight);
+
+  if (jvf_acc_jet_pt.size() < 5 || (jvf_acc_jet_pt.size() > 3 && jvf_acc_jet_pt[3] < 50000))
+
+    m_HistoContainer[n_pvtx_4jets_jetpt50_jvf_acc]->Fill(m_pvtx.m_pvtx_n, weight);
+
+  if (jvf_acc_jet_pt.size() < 5 || (jvf_acc_jet_pt.size() > 3 && jvf_acc_jet_pt[3] < 70000))
+
+    m_HistoContainer[n_pvtx_4jets_jetpt70_jvf_acc]->Fill(m_pvtx.m_pvtx_n, weight);
+
+  // For the five jets:
+  if (jvf_acc_jet_pt.size() < 6 || (jvf_acc_jet_pt.size() > 4 && jvf_acc_jet_pt[4] < 30000))
+
+    m_HistoContainer[n_pvtx_5jets_jetpt30_jvf_acc]->Fill(m_pvtx.m_pvtx_n, weight);
+
+  if (jvf_acc_jet_pt.size() < 6 || (jvf_acc_jet_pt.size() > 4 && jvf_acc_jet_pt[4] < 40000))
+
+    m_HistoContainer[n_pvtx_5jets_jetpt40_jvf_acc]->Fill(m_pvtx.m_pvtx_n, weight);
+
+  if (jvf_acc_jet_pt.size() < 6 || (jvf_acc_jet_pt.size() > 4 && jvf_acc_jet_pt[4] < 50000))
+
+    m_HistoContainer[n_pvtx_5jets_jetpt50_jvf_acc]->Fill(m_pvtx.m_pvtx_n, weight);
+
+  if (jvf_acc_jet_pt.size() < 6 || (jvf_acc_jet_pt.size() > 4 && jvf_acc_jet_pt[4] < 70000))
+
+    m_HistoContainer[n_pvtx_5jets_jetpt70_jvf_acc]->Fill(m_pvtx.m_pvtx_n, weight);
 }
 
 void MiniReaderAlg::FillEventInfo(double weight)
@@ -187,6 +305,18 @@ void MiniReaderAlg::PlotJetEfficency()
   m_HistoContainer[jetEfficency_3jets_jetpt70]->Divide(m_HistoContainer[n_pvtx_3jets_jetpt70],
 						       m_HistoContainer[n_pvtx_noCut]);
 
+  m_HistoContainer[jetEfficency_3jets_jetpt30_jvf_acc]->Divide(m_HistoContainer[n_pvtx_3jets_jetpt30_jvf_acc],
+							       m_HistoContainer[n_pvtx_noCut]);
+
+  m_HistoContainer[jetEfficency_3jets_jetpt40_jvf_acc]->Divide(m_HistoContainer[n_pvtx_3jets_jetpt40_jvf_acc],
+							       m_HistoContainer[n_pvtx_noCut]);
+
+  m_HistoContainer[jetEfficency_3jets_jetpt50_jvf_acc]->Divide(m_HistoContainer[n_pvtx_3jets_jetpt50_jvf_acc],
+							       m_HistoContainer[n_pvtx_noCut]);
+
+  m_HistoContainer[jetEfficency_3jets_jetpt70_jvf_acc]->Divide(m_HistoContainer[n_pvtx_3jets_jetpt70_jvf_acc],
+							       m_HistoContainer[n_pvtx_noCut]);
+
   m_HistoContainer[jetEfficency_4jets_jetpt30]->Divide(m_HistoContainer[n_pvtx_4jets_jetpt30],
 						       m_HistoContainer[n_pvtx_noCut]);
 
@@ -199,6 +329,18 @@ void MiniReaderAlg::PlotJetEfficency()
   m_HistoContainer[jetEfficency_4jets_jetpt70]->Divide(m_HistoContainer[n_pvtx_4jets_jetpt70],
 						       m_HistoContainer[n_pvtx_noCut]);
 
+  m_HistoContainer[jetEfficency_4jets_jetpt30_jvf_acc]->Divide(m_HistoContainer[n_pvtx_4jets_jetpt30_jvf_acc],
+							       m_HistoContainer[n_pvtx_noCut]);
+
+  m_HistoContainer[jetEfficency_4jets_jetpt40_jvf_acc]->Divide(m_HistoContainer[n_pvtx_4jets_jetpt40_jvf_acc],
+							       m_HistoContainer[n_pvtx_noCut]);
+
+  m_HistoContainer[jetEfficency_4jets_jetpt50_jvf_acc]->Divide(m_HistoContainer[n_pvtx_4jets_jetpt50_jvf_acc],
+							       m_HistoContainer[n_pvtx_noCut]);
+
+  m_HistoContainer[jetEfficency_4jets_jetpt70_jvf_acc]->Divide(m_HistoContainer[n_pvtx_4jets_jetpt70_jvf_acc],
+							       m_HistoContainer[n_pvtx_noCut]);
+
   m_HistoContainer[jetEfficency_5jets_jetpt30]->Divide(m_HistoContainer[n_pvtx_5jets_jetpt30],
 						       m_HistoContainer[n_pvtx_noCut]);
 
@@ -210,4 +352,16 @@ void MiniReaderAlg::PlotJetEfficency()
 
   m_HistoContainer[jetEfficency_5jets_jetpt70]->Divide(m_HistoContainer[n_pvtx_5jets_jetpt70],
 						       m_HistoContainer[n_pvtx_noCut]);
+
+  m_HistoContainer[jetEfficency_5jets_jetpt30_jvf_acc]->Divide(m_HistoContainer[n_pvtx_5jets_jetpt30_jvf_acc],
+							       m_HistoContainer[n_pvtx_noCut]);
+
+  m_HistoContainer[jetEfficency_5jets_jetpt40_jvf_acc]->Divide(m_HistoContainer[n_pvtx_5jets_jetpt40_jvf_acc],
+							       m_HistoContainer[n_pvtx_noCut]);
+
+  m_HistoContainer[jetEfficency_5jets_jetpt50_jvf_acc]->Divide(m_HistoContainer[n_pvtx_5jets_jetpt50_jvf_acc],
+							       m_HistoContainer[n_pvtx_noCut]);
+
+  m_HistoContainer[jetEfficency_5jets_jetpt70_jvf_acc]->Divide(m_HistoContainer[n_pvtx_5jets_jetpt70_jvf_acc],
+							       m_HistoContainer[n_pvtx_noCut]);
 }
